// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly render ExpensesSummary with 1 expense test 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCunt={1}
    expensesTotal={235}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
>
        <h1
                className="page-header__title"
        >
                Viewing 
                <span />
                 
                expenses
                 totalling 
                <span>
                        $2.35
                </span>
        </h1>
        <div
                className="page-header__actions"
        >
                <Link
                        className="regular-button"
                        replace={false}
                        to="/create"
                >
                        Add Expenses
                </Link>
        </div>
</div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
>
            Viewing 
            <span />
             
            expenses
             totalling 
            <span>
                        $2.35
            </span>
</h1>,
          <div
            className="page-header__actions"
>
            <Link
                        className="regular-button"
                        replace={false}
                        to="/create"
            >
                        Add Expenses
            </Link>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viewing ",
              <span />,
              " ",
              "expenses",
              " totalling ",
              <span>
                $2.35
</span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viewing ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            " ",
            "expenses",
            " totalling ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$2.35",
              },
              "ref": null,
              "rendered": "$2.35",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="regular-button"
              replace={false}
              to="/create"
>
              Add Expenses
</Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Add Expenses",
              "className": "regular-button",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Add Expenses",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
>
          <h1
                    className="page-header__title"
          >
                    Viewing 
                    <span />
                     
                    expenses
                     totalling 
                    <span>
                              $2.35
                    </span>
          </h1>
          <div
                    className="page-header__actions"
          >
                    <Link
                              className="regular-button"
                              replace={false}
                              to="/create"
                    >
                              Add Expenses
                    </Link>
          </div>
</div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
>
              Viewing 
              <span />
               
              expenses
               totalling 
              <span>
                            $2.35
              </span>
</h1>,
            <div
              className="page-header__actions"
>
              <Link
                            className="regular-button"
                            replace={false}
                            to="/create"
              >
                            Add Expenses
              </Link>
</div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viewing ",
                <span />,
                " ",
                "expenses",
                " totalling ",
                <span>
                  $2.35
</span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viewing ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              " ",
              "expenses",
              " totalling ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$2.35",
                },
                "ref": null,
                "rendered": "$2.35",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="regular-button"
                replace={false}
                to="/create"
>
                Add Expenses
</Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Add Expenses",
                "className": "regular-button",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Add Expenses",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`correctly render ExpensesSummary with multiple expenses test 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCunt={23}
    expensesTotal={23512340987}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
>
        <h1
                className="page-header__title"
        >
                Viewing 
                <span />
                 
                expenses
                 totalling 
                <span>
                        $235,123,409.87
                </span>
        </h1>
        <div
                className="page-header__actions"
        >
                <Link
                        className="regular-button"
                        replace={false}
                        to="/create"
                >
                        Add Expenses
                </Link>
        </div>
</div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
>
            Viewing 
            <span />
             
            expenses
             totalling 
            <span>
                        $235,123,409.87
            </span>
</h1>,
          <div
            className="page-header__actions"
>
            <Link
                        className="regular-button"
                        replace={false}
                        to="/create"
            >
                        Add Expenses
            </Link>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viewing ",
              <span />,
              " ",
              "expenses",
              " totalling ",
              <span>
                $235,123,409.87
</span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viewing ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            " ",
            "expenses",
            " totalling ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$235,123,409.87",
              },
              "ref": null,
              "rendered": "$235,123,409.87",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="regular-button"
              replace={false}
              to="/create"
>
              Add Expenses
</Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Add Expenses",
              "className": "regular-button",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Add Expenses",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
>
          <h1
                    className="page-header__title"
          >
                    Viewing 
                    <span />
                     
                    expenses
                     totalling 
                    <span>
                              $235,123,409.87
                    </span>
          </h1>
          <div
                    className="page-header__actions"
          >
                    <Link
                              className="regular-button"
                              replace={false}
                              to="/create"
                    >
                              Add Expenses
                    </Link>
          </div>
</div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
>
              Viewing 
              <span />
               
              expenses
               totalling 
              <span>
                            $235,123,409.87
              </span>
</h1>,
            <div
              className="page-header__actions"
>
              <Link
                            className="regular-button"
                            replace={false}
                            to="/create"
              >
                            Add Expenses
              </Link>
</div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viewing ",
                <span />,
                " ",
                "expenses",
                " totalling ",
                <span>
                  $235,123,409.87
</span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viewing ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              " ",
              "expenses",
              " totalling ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$235,123,409.87",
                },
                "ref": null,
                "rendered": "$235,123,409.87",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="regular-button"
                replace={false}
                to="/create"
>
                Add Expenses
</Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Add Expenses",
                "className": "regular-button",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Add Expenses",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
